syntax="proto3";

package trade;
option go_package="tradepb";

message Trade {
    string id = 1;
    enum Type {
        BUY = 0;
        SELL = 1;
    }
    Type type = 2;
    string market = 3;
    float price = 4;
    float amount = 5;
    float fee = 6;
    float total = 7;
    bool fiat_ind = 8;
    string date = 9;
}

message AddTradeRequest {
    Trade trade = 1;
    int32 portfolioId = 2;
}

message AddTradeResponse {
    string tradeId = 1;
}

message DeleteTradeRequest {
    int32 tradeId = 1;
    int32 portfolioId = 2;
}

message DeleteTradeResponse {
    int32 deletedCount = 1;
}

message UpdateTradeRequest {
    int32 tradeId = 1;
    int32 portfolioId = 2;
    Trade trade = 3;
}

message UpdateTradeResponse {
    int32 modifiedCount = 1;
}

message GetTradeRequest {
    int32 tradeId = 1;
    int32 portfolioId = 2;
}

message GetTradeResponse {
    Trade trade = 1;
}

service TradeService {
    rpc AddTrade (AddTradeRequest) returns (AddTradeResponse) {};
    rpc DeleteTrade (DeleteTradeRequest) returns (DeleteTradeResponse) {};
    rpc UpdateTrade (UpdateTradeRequest) returns (UpdateTradeResponse) {};
    rpc GetTrade (GetTradeRequest) returns (GetTradeResponse) {};
}